Fixed annoying content scrollbar doubling issue

--- a/static/default/less/app-web/global.less
+++ b/static/default/less/app-web/global.less
@@ -1,14 +1,15 @@
-/* Content */	
-	
+/* Content */
+
 	#content {
 	  min-width: 775px;
-	  margin-top: 63px;	  
+	  margin-top: 62px;	  
     margin-left: 225px;
 	}
 
   #content-tools {
+    min-height: 45px;
     position: fixed;
-    z-index: 10; 
+    z-index: 10;
   }
 
 /* Sub Navigation */
