--- a/static/default/less/app-web/topbar.less
+++ b/static/default/less/app-web/topbar.less
@@ -11,6 +11,7 @@
 		min-width: 800px;
 		background: @grayLight;
 		border-bottom: 1px solid @gray;
+		box-sizing: border-box;
 	}
 
 	.topbar-logo {
