--- a/static/default/less/default.less
+++ b/static/default/less/default.less
@@ -41,28 +41,12 @@
 
 /* App */
 @import "app/messages.less";
-@import "app/bulk-actions.less";
 @import "app/notifications.less";
 @import "app/navigation.less";
 @import "app/contacts.less";
-
-    /* FIXME: Belongs in the .css, here for testing */
-    .tag_new_0 .navigation-attention-important { display: none }
-    #debug { padding: 0; margin: 1em; text-align: right; line-height: 1em; font-size: 0.75em; }
-    tr.message-body { margin-top: -1em; }
-    div.message-body { margin-top: 1em; }
-    #debug { white-space: pre-wrap; }
-    p.text-part-text { white-space: pre-wrap; }
-    p.text-part-quote { white-space: pre-wrap; color: #777; max-height: 5em; overflow: hidden; }
-
-    /* Force Graph */
-    .link { fill: none; stroke: #666; stroke-width: 1.5px; }
-    text { fill: #000; font: 12px sans-serif; pointer-events: none; }
-
 @import "app-web/topbar.less";
 @import "app-web/global.less";
 @import "app-web/sidebar.less";
-@import "app-web/sub-navigation.less";
 @import "app-web/compose.less";
 @import "app-web/search.less";
 @import "app-web/pile.less";
